Home profile page fix overflow issue

--- a/scss/1_components/11_homes/_homes.scss
+++ b/scss/1_components/11_homes/_homes.scss
@@ -126,13 +126,11 @@
   &--fixed-height {
     .content {
       height: 250px;
-      overflow: scroll;
     }
   }
   &--fixed-height-tall {
     .content {
       height: 350px;
-      overflow: scroll;
     }
   }
 }
